<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity.FirstFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/postName"
        android:text="@string/post_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"/>


    <EditText
        android:id="@+id/post_name_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postName"
        android:layout_marginStart="8dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textLongMessage" />


    <TextView
        android:id="@+id/insert_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_text"
        app:layout_constraintTop_toBottomOf="@id/post_name_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_text"
        android:hint="@string/your_post">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_text_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/loading_gif"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/post_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        android:src="@drawable/loading_gif"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:id="@+id/post_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>