<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity.UserProfileFragment">

    <Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center|end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="top"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey_there"
            android:layout_gravity="center|center"
            android:textSize="24sp"/>
    </Toolbar>




    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_toolbar"/>

    <TextView
        android:id="@+id/select_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/md_theme_light_secondary"
        android:padding="10dp"
        android:text="@string/change_profile_picture"
        app:layout_constraintStart_toEndOf="@id/user_pic"
        app:layout_constraintTop_toBottomOf="@id/email"/>


    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/user_pic"
        app:layout_constraintStart_toEndOf="@id/user_pic"
        android:text="@string/user_number"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@id/user_pic"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="8dp"
        tools:text="usernumber@mail.com"/>

    <TextView
        android:id="@+id/your_recent_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_pic"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/your_recent_posts"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/your_recent_posts"
        app:layout_constraintStart_toStartOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>