<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heading"
            android:text="@string/contribute_to_the_feed"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/post_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="30dp"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading"
            android:hint="@string/your_post">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_text_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="38dp"
            android:layout_height="38dp"
            app:layout_constraintStart_toStartOf="@id/post_text"
            android:layout_marginVertical="14dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintTop_toTopOf="@id/post_text"/>

        <ImageView
            android:id="@+id/loading_gif"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/post_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            android:src="@drawable/loading_gif"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:id="@+id/post_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>