<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity.EditFragment">

    <Toolbar
        android:id="@+id/edit_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:layout_gravity="center|center"
            android:textSize="24sp"
            />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_arrow_back_24"/>
    </Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/user_pic"
        android:layout_margin="8dp"
        android:background="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/post_name"
        android:layout_margin="8dp"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/user_pic"
        app:layout_constraintBottom_toBottomOf="@id/user_pic"
        app:layout_constraintStart_toEndOf="@+id/user_pic"
        tools:text="Petya delaet"/>

    <EditText
        android:id="@+id/edit_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/user_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        android:padding="8dp"
        android:textSize="22sp"
        tools:text="Post lorem ipsum Words count more than one line please right now hey hi"/>

    <TextView
        android:id="@+id/post_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text"
        android:visibility="gone"
        android:textColor="@color/md_theme_light_secondary"
        app:layout_constraintTop_toBottomOf="@id/edit_post"
        app:layout_constraintEnd_toEndOf="@id/edit_post"
        android:layout_marginHorizontal="8dp"
        android:textSize="22sp"/>


    <TextView
        android:id="@+id/post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="8dp"
        tools:text="Post lorem ipsum Words count more than one line please right now hey hi"/>

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/ic_baseline_delete_forever_24"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/post_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0.5"/>

    <ImageView
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_edit_24"
        android:visibility="gone"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/post_text"
        app:layout_constraintEnd_toStartOf="@id/delete_button"
        android:alpha="0.5"/>

    <View
        android:id="@+id/split_line"
        android:layout_width="match_parent"
        android:layout_height= "1dp"
        android:background="@color/material_dynamic_neutral80"
        app:layout_constraintBottom_toTopOf="@id/comments_heading"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/comments_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        app:layout_constraintTop_toBottomOf="@id/post_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="8dp"
        android:textSize="24sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comments_heading" />

    <androidx.cardview.widget.CardView
        android:id="@+id/background_comment"
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/comment_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/add_comment"
                android:alpha="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/send_button"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="50dp"/>

            <TextView
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="send"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="@id/comment_et"
                app:layout_constraintTop_toTopOf="@id/comment_et"
                app:layout_constraintStart_toEndOf="@id/comment_et"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>